test_regress/t/t_flag_errorlimit_bad.out
%Error: t/t_flag_errorlimit_bad.v:10:7: Duplicate declaration of signal: 'u1'
   10 |   int u1;
      |       ^~
        t/t_flag_errorlimit_bad.v:9:7: ... Location of original declaration
    9 |   int u1;
      |       ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_flag_errorlimit_bad.v:11:7: Duplicate declaration of signal: 'u1'
   11 |   int u1;
      |       ^~
        t/t_flag_errorlimit_bad.v:9:7: ... Location of original declaration
    9 |   int u1;
      |       ^~
%Error: Exiting due to
